src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@media print {
  * {
    @apply text-sm;
  }

  main {
    @apply pb-0 !important;
  }

  .no-print,
  .no-print * {
    display: none !important;
  }
}

* {
  word-break: break-word;
}

.time-line-container > div:last-child .entry_time > .entry_line {
  display: none;
}

.block-scale {
  @apply hover:!scale-[100%];
}

a.badge {
  @apply transition ease-in-out hover:scale-[105%];
}

.prose {
  blockquote {
    @apply max-w-min min-w-fit not-italic;
    quotes: none !important;
  }

  p > img {
    @apply rounded-md mb-1 w-auto object-contain;
    max-width: min(100%, 32rem);
    max-height: min(70svh, 24rem);
  }

  iframe {
    @apply mx-auto !mb-1;
  }

  hr {
    @apply my-8;
  }

  p img + em,
  .label {
    @apply inline-block text-center not-italic prose-sm w-full my-2 px-4 md:px-16;
  }

  .footnotes {
    @apply prose-sm max-w-min min-w-fit mt-12;
  }

  #footnote-label {
    @apply hidden;
  }

  .data-footnote-backref {
    @apply no-underline after:content-none font-mono;
  }

  sup {
    @apply ml-0.5;
  }

  pre {
    @apply whitespace-pre-wrap;
  }
}

